@@ -1,3 +1,11 @@
+2019-07-04  Szabolcs Nagy  <szabolcs.nagy@arm.com>
+
+	* sysdeps/aarch64/Makefile: Install sys/ifunc.h and add tests.
+	* sysdeps/aarch64/dl-irel.h (elf_ifunc_invoke): Update to new ABI.
+	* sysdeps/aarch64/sys/ifunc.h: New file.
+	* sysdeps/aarch64/tst-ifunc-arg-1.c: New file.
+	* sysdeps/aarch64/tst-ifunc-arg-2.c: New file.
+
 2019-07-01  Florian Weimer  <fweimer@redhat.com>
 
 	[BZ #20188]
